--- a/Styled Webpage/basic.css
+++ b/Styled Webpage/basic.css
@@ -36,3 +36,21 @@ p{
     	50%{background-position:100% 19%}
     	100%{background-position:0% 82%}
 	}
+#button{
+	width: 6em;
+	border: 2px solid green;
+    background: #ffe;
+    border-radius: 5px;
+}
+a {
+    display: block;
+    width: 100%;
+    line-height: 2em;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 5px;
+}
+a:hover {
+    color: red;
+    background: #eff;
+}
