--- a/basic.css
+++ b/basic.css
@@ -12,6 +12,18 @@ header, footer {
     text-align: center;
 }
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
+form {
+    width: 300px;
+    margin: 0 auto;
+    text-align: center;
+    vertical-align: middle;
+}
+
 nav {
     float: left;
     max-width: 160px;
