--- a/basic.css
+++ b/basic.css
@@ -4,6 +4,12 @@ div.container {
     border: 1px solid gray;
 }
 
+div.aDiv {
+    width: 300px; 
+    height: 300px; 
+    margin: 0 auto;
+}
+
 header, footer {
     padding: 1em;
     color: white;
